# alipes

./: .pre-commit-config.yaml  LICENSE  README.md  linear_regression.py  pyproject.toml
