[project]
name = "alipes"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    { name = "Lars Andersen Bratholm", email = "larsbratholm@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pydantic",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = ["pre-commit", "mypy"]


[tool.ruff.lint]
# Add docstyle convensions
select = ["D", "I", "E4", "E7", "E9", "F"]
extend-safe-fixes = ["D415"]
ignore = [
"D200", # Disable condensing single-line docstrings
"D212", # Start docstring summary on second line (enables D213)
"D107", # Ignore init docstrings
"F722", # jaxtyping compability
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.mypy]
strict = true
implicit_reexport = true

[[tool.mypy.overrides]]
# module = []
ignore_missing_imports = true
